# code_tokenizer

./: .codecov.yml  .coverage  .coveragerc  .cursor-updates  .env  .flake8  .gitignore  .markdownlint.json  .pre-commit-config.yaml  Frontend_analysis.md  Frontend_docs.markdown  LICENSE  README.md  code-tokenizer-examples.md  code_tokenizer.sln  coverage.xml  examples-draft.md  jest.config.js  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test_results.txt  tsconfig.json
.github/workflows/: ci.yml  release.yml
docs/: phase-2-implementation-plan.md
output/: analysis.md  analysis_analysis.md  analysis_docs.markdown
product documentation/: combined-format.md  functional_requirements.md  implementation_review.md  requirements_catalog.md  user_stories.md
scripts/: benchmark.py  run_ci_checks.sh  run_pre_commit_checks.bat  run_pre_commit_checks.sh
src/: __init__.py  cli.py  converter.py
src/code_tokenizer/: __init__.py  __init__.py,cover  __main__.py  __main__.py,cover  cli.py  cli.py,cover  converter.py  environment.py  exceptions.py  exceptions.py,cover
src/code_tokenizer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/code_tokenizer/core/: __init__.py  __init__.py,cover  sanitizer.py  tokenizer.py  tokenizer.py,cover
src/code_tokenizer/formatters/: __init__.py  base_formatter.py  json_formatter.py  markdown_formatter.py  text_formatter.py  yaml_formatter.py
src/code_tokenizer/models/: __init__.py  __init__.py,cover  content.py  model_config.py  model_config.py,cover
src/code_tokenizer/services/: __init__.py  __init__.py,cover  filesystem_service.py  filesystem_service.py,cover  language_detector.py  language_detector.py,cover  tokenizer_service.py  tokenizer_service.py,cover
src/code_tokenizer/ui/: __init__.py  __init__.py,cover  progress_display.py  progress_display.py,cover
src/code_tokenizer/utils/: __init__.py  __init__.py,cover  path_utils.py  path_utils.py,cover
test_projects/ProjectA/: ProjectA.http
test_projects/ProjectB/: ProjectB.http
test_projects/ProjectB/Properties/: launchSettings.json
test_projects/ProjectWithGitignore/: .gitignore  ProjectWithGitignore.http
test_projects/ProjectWithoutGitignore/: ProjectWithoutGitignore.http
test_projects/ProjectWithoutGitignore/Properties/: launchSettings.json
tests/: conftest.py  test_content_model.py  test_edge_cases.py  test_filesystem_service.py  test_formatters.py  test_gitignore.py  test_integration.py  test_language_detector.py  test_performance.py  test_sanitizer.py  test_tokenizer.py  test_ui.py  test_unit.py
